feat: [PL-31890]: fix queries that fetch unlimited records for UserMemberShipV2 and servicesNG (#44767)